--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Hello World</title> 
+            <title>Hello World1</title> 
         </head>
         <body>
-            <H1>Hello World</H1>
+            <H1>Hello World1</H1>
             <p>This is my first paragraph</p>
         </body>
     </html>
